# ChessPP

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  castling.h
screenshots/: .gitkeep
src/: CMakeLists.txt  app.cpp  app.h  bishop.cpp  bishop.h  board.cpp  board.h  colors.h  constants.h  fen.cpp  fen.h  king.cpp  king.h  knight.cpp  knight.h  main.cpp  move_record.h  pawn.cpp  pawn.h  piece.h  queen.cpp  queen.h  rook.cpp  rook.h  square.cpp  square.h  state.h  window.cpp
